<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_dark"
    tools:context=".MainActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/rlMainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>

        <com.machacode.oscarmorquecho.ledtext.utils.ScrollTextView
            android:id="@+id/tvTextDisplayed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:ellipsize="start"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:freezesText="true"
            android:gravity="center|start"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textAlignment="textStart"
            android:textColor="@color/green"/>
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nv_right_menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:fitsSystemWindows="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSaveCurrentConfiguration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_margin="5dp"
                    android:text="@string/save_current_configuration"
                    android:textColor="@color/white" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvSavedConfigurations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnSaveCurrentConfiguration"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvEmptyList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_list"
                    android:gravity="center_horizontal|center_vertical"
                    android:visibility="gone"/>
            </RelativeLayout>
        </ScrollView>
    </com.google.android.material.navigation.NavigationView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nv_left_menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/direction"
                    android:textSize="@dimen/titles"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnLeftDirection"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:textColor="@color/white"
                        app:icon="@drawable/ic_arrow_left"
                        app:iconGravity="start"
                        app:iconTint="@color/white"
                        tools:ignore="ButtonStyle" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnStop"
                        android:layout_width="0dp"
                        android:layout_weight="0.6"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/stop"
                        android:textColor="@color/white"
                        tools:ignore="ButtonStyle" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnRightDirection"
                        android:layout_width="0dp"
                        android:layout_weight="0.2"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        app:icon="@drawable/ic_arrow_right"
                        app:iconGravity="end"
                        app:iconTint="@color/white"
                        tools:ignore="ButtonStyle" />
                </LinearLayout>

                <View style="@style/Divider"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/size"
                    android:textSize="@dimen/titles"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnMinus"
                        android:layout_width="0dp"
                        android:layout_weight="0.2"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        app:icon="@drawable/ic_minus"
                        app:iconTint="@color/white"
                        tools:ignore="ButtonStyle"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnPlus"
                        android:layout_width="0dp"
                        android:layout_weight="0.2"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        app:icon="@drawable/ic_plus"
                        app:iconTint="@color/white"
                        tools:ignore="ButtonStyle"/>
                </LinearLayout>

                <View style="@style/Divider"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvTextBlink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/blink"
                        android:textSize="@dimen/titles"/>

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/swtBlink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_toEndOf="@+id/tvTextBlink"/>
                </RelativeLayout>

                <View style="@style/Divider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/speed"
                        android:textSize="@dimen/titles" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvSpeedInNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="@dimen/titles"/>
                </LinearLayout>

                <SeekBar
                    android:id="@+id/sbTextSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/white"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:progressDrawable="@drawable/custom_progress"
                    android:min="50"
                    android:max="10000"
                    />

                <View style="@style/Divider"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/color"
                    android:textSize="@dimen/titles"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnColor"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:text="@string/color"
                        android:textColor="@color/white"/>

                    <RelativeLayout
                        android:id="@+id/rlColor"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="match_parent"
                        android:background="@color/green">

                    </RelativeLayout>
                </LinearLayout>

                <View style="@style/Divider"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/background_color"
                    android:textSize="@dimen/titles"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnBackgroundColor"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:text="@string/background"
                        android:textColor="@color/white"/>

                    <RelativeLayout
                        android:id="@+id/rlBackgroundColor"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="match_parent"
                        android:background="@color/black">
                    </RelativeLayout>
                </LinearLayout>

                <View style="@style/Divider"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvTextPoliceSiren"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/blink"
                        android:textSize="@dimen/titles"/>

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/swtPoliceSiren"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_toEndOf="@+id/tvTextPoliceSiren"/>
                </RelativeLayout>

                <View style="@style/Divider"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fonts"
                    android:textSize="@dimen/titles"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvFonts"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:padding="4dp" />
            </LinearLayout>
        </ScrollView>
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>